fixed profile image align

--- a/react-app/src/components/Server/Sidebar/Sidebar.css
+++ b/react-app/src/components/Server/Sidebar/Sidebar.css
@@ -202,7 +202,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 50%;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
     content: "Edit";
@@ -211,7 +211,7 @@
     font-weight: bolder;
     cursor: pointer;
     background-color: #202225;
-    border-radius: 50%;
+    border-radius: 46%;
     width: 50px;
     height: 50px;
 }
